# stop

./: AGENTS.md  CONTEXT.md  Cargo.toml  README.md  bench.sh  fedora-test.sh  sync-to-fedora.sh
.github/workflows/: ci.yml
ai/: DECISIONS.md  PLAN.md  RESEARCH.md  STATUS.md  TODO.md
ai/research/: code-review.md  compound-filters.md  comprehensive-testing-summary.md  fedora-results.md  fedora-testing.md  filter-syntax.md  network-metrics.md  open-files.md  optimization-results.md  performance-benchmarks.md  profiling-results.md  real-world-usage.md  testing-optimization-plan.md  watch-mode.md
src/: filter.rs  main.rs  watch.rs
tests/: edge_cases_test.rs  integration_test.rs
