[package]
name = "stop"
version = "0.0.1"
edition = "2024"
authors = ["Nick <nick@nijaru.com>"]
description = "Structured process and system monitoring with JSON output"
license = "MIT"
repository = "https://github.com/nijaru/stop"
keywords = ["cli", "monitoring", "processes", "json", "top"]
categories = ["command-line-utilities"]

[dependencies]
sysinfo = "0.37"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4"
thiserror = "2.0"
owo-colors = "4.1"
crossterm = "0.28"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"

[profile.release]
debug = true
