[package]
name = "stop-cli"
version = "0.0.1-alpha"
edition = "2024"
authors = ["Nick <nick@nijaru.com>"]
description = "Modern process monitoring with JSON, CSV, and human-readable output"
license = "MIT"
repository = "https://github.com/nijaru/stop"
keywords = ["cli", "monitoring", "processes", "json", "top"]
categories = ["command-line-utilities"]

[[bin]]
name = "stop"
path = "src/main.rs"

[dependencies]
sysinfo = "0.37"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4"
thiserror = "2.0"
owo-colors = "4.1"
crossterm = "0.28"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"

[profile.release]
debug = true
